# portfolio

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src/components/: About.tsx  Contact.tsx  Footer.tsx  Hero.tsx  Method.tsx  Navbar.tsx  ProofBar.tsx  SelectedWork.tsx  ToolsStack.tsx
src/data/: projects.ts
src/hooks/: useReducedMotion.ts
src/lib/: utils.ts
src/pages/: CaseStudyPage.tsx  SpecPage.tsx
tools/: LICENSE  README.md
tools/content-repurposer/: README.md
tools/drift/: README.md
tools/onboard/: README.md  SPEC.md  USER_MANUAL.md  onboard.cmd  pyproject.toml  requirements.txt
tools/onboard/config/: accounts.yaml  modules.yaml  roles.yaml
tools/onboard/docs/onboarding/: analytics-deep-dive.md  budget-pacing-basics.md  campaign-naming-conventions.md  campaign-setup-checklist.md  client-comms-norms.md  creative-trafficking.md  dashboard-standards.md  escalation-paths.md  growth-and-goals.md  how-we-work.md  platform-access.md  qa-before-launch.md  reporting-and-insights.md  scope-and-briefs.md  sql-fundamentals.md  stakeholder-mapping.md  status-report-cadence.md  welcome-and-mission.md
tools/onboard/docs/onboarding/accounts/: acme-brand-guidelines.md  globex-brand-guidelines.md
tools/onboard/src/: __init__.py  cli.py  gaps.py  pipeline.py  render.py  resolve.py  substitute.py
tools/onboard/tests/: test_onboard.py
